# musicselect

./: README.md  musicselect.cabal
MusicSelect/: Simplify.hs  Solve.hs  Types.hs
test/: main.hs
