name:   musicselect
version: 0.0.1
license:    OtherLicense
license-file: LICENSE
author:  Tero Laitinen
maintainer: Tero Laitinen
synopsis:  
description: 
category:    Scheduling
stability:   Experimental
cabal-version: >= 1.8
build-type:  Simple
homepage:    https://github.com/tlaitinen/musicselect

library
    build-depends:  base >= 4.3     && < 5
                 , time
                 , random
                 , containers
                 , glpk-hs
                 , mtl
                 , fuzzy-timings
                    
    exposed-modules: 
        MusicSelect.Types
        MusicSelect.Solve
        MusicSelect.Simplify
    ghc-options: -Wall

executable test
    build-depends:
        musicselect,
        fuzzy-timings,
        base,
        containers,
        time
        
    main-is: main.hs
    hs-source-dirs: test
    ghc-options: -O0 -Wall

source-repository head
    type: git
    location: https://github.com/tlaitinen/musicselect
